2008-04-19  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/Makefile.am:
	  Change LDFLAGS to LIBADD and add -lstdc++.

2008-04-16  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* README:
	* TODO:
	* autogen.sh:
	* configure.ac:
	* dllwrapper1/wine/ldt_keeper.c:
	* dllwrapper2/lib.h:
	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/BuzzMachine.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/BuzzMachineVirtualCallbacks.cpp:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/OscTable.cpp:
	* src/BuzzMachineLoader/OscTable.h:
	* src/BuzzMachineLoader/debug.cpp:
	* src/BuzzMachineLoader/debug.h:
	* src/Makefile.am:
	* src/bml.c:
	* src/bml.h:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	* tests/bt-cfg.sh.in:
	* tests/testmachine.sh:
	  Svn property tuning.

2008-03-26  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Back to development.
	  
=== release 0.3.0 ===

2008-03-26  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Updated NEWS:

	* src/bmltest_process.c:
	  fpu experiments.

2008-03-18  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Rebuild dll.

2008-03-18  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/mdkimp.cpp:
	  Comment only change.

2008-03-18  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/Makefile.am:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/Makefile.am:
	  More build fixes (don't pull win compat header in installed header).

	* tests/testmachine.sh:
	  Add the stereo fields.

2008-03-16  Stefan Kost  <ensonic@users.sf.net>

	* TODO: